Pathing & spacing bugfixes

--- a/src/App.css
+++ b/src/App.css
@@ -234,7 +234,6 @@ h1.arrival-panel-compact {
   
   .arrival-panel-list-header img {
     height: 1.1em;
-    margin-top: -0.05em;
   }
 
   .arrival-panel-outer {
